--- a/scripts/createCitiesCSVS.ipynb
+++ b/scripts/createCitiesCSVS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# https://simplemaps.com/data/world-cities\n",
-    "cities = pd.read_csv(\"../data/worldcities.csv\")"
+    "cities = pd.read_csv(\"../data/csv/worldcities.csv\")"
    ]
   },
   {
@@ -336,13 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Berlin.to_csv(\"../csv/Berlin_city_data.csv\", index=False)\n",
-    "cities.to_csv(\"../csv/world_city_data.csv\", index=False)\n",
-    "german_cities.to_csv(\"../csv/germany_city_data.csv\", index=False)"
+    "path = \"../data/csv/\"\n",
+    "Berlin.to_csv(f\"{path}Berlin_city_data.csv\", index=False)\n",
+    "cities.to_csv(f\"{path}world_city_data.csv\", index=False)\n",
+    "german_cities.to_csv(f\"{path}germany_city_data.csv\", index=False)"
    ]
   },
   {
