connect to Gans DB

--- a/scripts/connectMYSQL.ipynb
+++ b/scripts/connectMYSQL.ipynb
@@ -4,10 +4,69 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "import sqlalchemy"
+    "import sqlalchemy\n",
+    "import os\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "load_dotenv(find_dotenv(filename='.env'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema=\"Gans\"\n",
+    "host=\"127.0.0.1\"\n",
+    "user=\"root\"\n",
+    "password = os.environ[\"MYSQL_PASSWORD\"]\n",
+    "port=3306\n",
+    "con = f'mysql+pymysql://{user}:{password}@{host}:{port}/{schema}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities = pd.read_csv(\"../data/csv/germany_city_data.csv\")\n",
+    "city_weather = pd.read_csv(\"../final_tables/german_city_weather.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "188"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities.dropna().to_sql('cities', con=con, if_exists=\"replace\", index=False)\n",
+    "city_weather.dropna().to_sql('citiy_weather', con=con, if_exists=\"replace\", index=False)"
    ]
   },
   {
