--- a/scripts/citys.ipynb
+++ b/scripts/citys.ipynb
@@ -97,7 +97,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/kx/b3xc9jhj6qd_wgghcg01wqyr0000gn/T/ipykernel_19174/3320118520.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/kx/b3xc9jhj6qd_wgghcg01wqyr0000gn/T/ipykernel_19303/3320118520.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  all_qwm_cities = pd.read_csv(\"../data/csv/owm_city_data.csv\")\n"
      ]
     },
@@ -330,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@log_step\n",
+    "\n",
     "def adjust_datatypes(df):\n",
     "    df[\"city_id\"] = df[\"city_id\"].astype(\"int64\").astype(\"string\")\n",
     "    df[\"city_name\"] = df[\"city_name\"].astype(\"string\")\n",
@@ -359,14 +359,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@log_step\n",
-    "def send_to_DB(df, table_name, if_exists=\"replace\"):\n",
-    "    schema =    os.environ[\"DB_SCHEMA\"]\n",
-    "    host =      os.environ[\"DB_HOST\"]\n",
-    "    user =      os.environ[\"DB_USER\"]\n",
-    "    password =  os.environ[\"DB_PASSWORD\"]\n",
-    "    port =      os.environ[\"DB_PORT\"]\n",
-    "    con = f'mysql+pymysql://{user}:{password}@{host}:{port}/{schema}'\n",
+    "def send_to_DB(df, table_name, if_exists=\"replace\"):      \n",
+    "    con = f'mysql+pymysql://{os.environ[\"DB_USER\"]}:{os.environ[\"DB_PASSWORD\"]}@{os.environ[\"DB_HOST\"]}:{os.environ[\"DB_PORT\"]}/{os.environ[\"DB_SCHEMA\"]}'\n",
     "    return df.to_sql(table_name, con=con, if_exists=if_exists, index=False)\n"
    ]
   },
@@ -379,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -387,25 +381,25 @@
      "output_type": "stream",
      "text": [
       "init_pipeline:\n",
-      " shape=(209579, 6) took 0:00:00.010023s\n",
+      " shape=(209579, 6) took 0:00:00.009449s\n",
       "\n",
       "rename_columns:\n",
-      " shape=(209579, 6) took 0:00:00.011278s\n",
+      " shape=(209579, 6) took 0:00:00.011725s\n",
       "\n",
       "drop_columns:\n",
-      " shape=(209579, 5) took 0:00:00.005658s\n",
+      " shape=(209579, 5) took 0:00:00.004909s\n",
       "\n",
       "add_columns:\n",
-      " shape=(54793, 7) took 0:00:00.422559s\n",
+      " shape=(54793, 7) took 0:00:00.433742s\n",
       "\n",
       "drop_duplicates:\n",
-      " shape=(26649, 7) took 0:00:00.013272s\n",
+      " shape=(26649, 7) took 0:00:00.012868s\n",
       "\n",
       "get_german_cities:\n",
-      " shape=(2127, 7) took 0:00:00.003986s\n",
+      " shape=(2127, 7) took 0:00:00.002986s\n",
       "\n",
       "adjust_datatypes:\n",
-      " shape=(2127, 7) took 0:00:00.008114s\n",
+      " shape=(2127, 7) took 0:00:00.007297s\n",
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2127 entries, 0 to 2126\n",
@@ -445,21 +439,26 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/simo/Home/WBS-Bootcamp/data_engineering-Gans/scripts/citys.ipynb Cell 29'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/simo/Home/WBS-Bootcamp/data_engineering-Gans/scripts/citys.ipynb#ch0000007?line=0'>1</a>\u001b[0m send_to_DB(df\u001b[39m=\u001b[39;49mgerman_cities, table_name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcities\u001b[39;49m\u001b[39m\"\u001b[39;49m, if_exists\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mreplace\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "\u001b[1;32m/Users/simo/Home/WBS-Bootcamp/data_engineering-Gans/scripts/citys.ipynb Cell 7'\u001b[0m in \u001b[0;36mlog_step.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/simo/Home/WBS-Bootcamp/data_engineering-Gans/scripts/citys.ipynb#ch0000047?line=4'>5</a>\u001b[0m result \u001b[39m=\u001b[39m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/simo/Home/WBS-Bootcamp/data_engineering-Gans/scripts/citys.ipynb#ch0000047?line=5'>6</a>\u001b[0m time_taken \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(dt\u001b[39m.\u001b[39mdatetime\u001b[39m.\u001b[39mnow() \u001b[39m-\u001b[39m tic)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/simo/Home/WBS-Bootcamp/data_engineering-Gans/scripts/citys.ipynb#ch0000047?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m shape=\u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m.\u001b[39mshape\u001b[39m}\u001b[39;00m\u001b[39m took \u001b[39m\u001b[39m{\u001b[39;00mtime_taken\u001b[39m}\u001b[39;00m\u001b[39ms\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/simo/Home/WBS-Bootcamp/data_engineering-Gans/scripts/citys.ipynb#ch0000047?line=7'>8</a>\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'shape'"
-     ]
+     "data": {
+      "text/plain": [
+       "2127"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "send_to_DB(df=german_cities, table_name=\"cities\", if_exists=\"replace\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
